# Stellar-ZK

./: .gitignore  ADR.md  Cargo.toml  README.md  TRD.md  package-lock.json  plan.md  skills-lock.json  task.md
circuits/circom/voting/: generate_proof.js  pot10_0001.ptau  pot10_final.ptau  verification_key.json  voting.circom  voting.r1cs  voting.sym  voting_0000.zkey  voting_final.zkey
circuits/circom/voting/voting_js/: voting.wasm
circuits/credential/: Nargo.toml
circuits/credential/src/: main.nr
circuits/lib/merkle/: Nargo.toml  README.md
circuits/lib/merkle/src/: append_only_tree.nr  benchmarks.nr  indexed_tree.nr  leaf_preimage.nr  lib.nr  membership.nr  merkle_tree.nr  root.nr  unbalanced_merkle_tree.nr  utils.nr
circuits/lib/poseidon/src/: poseidon2.nr
circuits/payroll/: Nargo.toml
circuits/payroll/src/: main.nr
circuits/payroll_guest/: Cargo.toml
circuits/payroll_guest/src/: main.rs
contracts/private_governance/: Cargo.toml
contracts/private_governance/src/: lib.rs  test.rs
contracts/private_governance/test_snapshots/test/: test_double_vote_rejected.1.json  test_has_voted_false_initially.1.json
contracts/private_treasury/: Cargo.toml
contracts/private_treasury/src/: lib.rs
contracts/zk_credential/: Cargo.toml
contracts/zk_credential/src/: lib.rs
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/credentials/: page.tsx
frontend/src/hooks/: useCredential.ts
frontend/src/lib/: contracts.ts  soroban.ts  zkProver.ts
graphify-out/: .graphify_labels.json  .graphify_root  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
lib/rs-soroban-ultrahonk/: Cargo.toml
scripts/: deploy.sh
(+11 files in other folders)
