[workspace]
resolver = "2"
members = ["circuits/payroll_guest",
    "contracts/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
soroban-sdk = { version = "26.1.0" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
strip = true
lto = true
panic = "abort"
codegen-units = 1
