[package]
name = "private_treasury"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
ultrahonk_soroban_verifier = { path = "../../lib/rs-soroban-ultrahonk/crates/ultrahonk-soroban-verifier" }
risc0-interface = { path = "../../lib/stellar-risc0-verifier/contracts/interface" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
