[package]
name = "zk_credential"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
ultrahonk_soroban_verifier = { path = "../../lib/rs-soroban-ultrahonk/crates/ultrahonk-soroban-verifier" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
